# skill-manager-cli

./: .gitignore  Cargo.toml  create-skill.sh  get-skills.sh
skill-manager/: Cargo.toml
skill-manager-cli/: Cargo.toml
skill-manager-cli/src/: main.rs
skill-manager-in-memory/: Cargo.toml
skill-manager-in-memory/src/: employees.rs  lib.rs  projects.rs  skills.rs
skill-manager-tui/: Cargo.toml
skill-manager-tui/src/: main.rs
skill-manager/src/: employees.rs  in_memory.rs  lib.rs  projects.rs  skills.rs  wrapper.rs
skill-manager/src/employees/: in_memory.rs  usecase.rs
skill-manager/src/projects/: in_memory.rs  usecase.rs
skill-manager/src/skills/: bl.rs  effect.rs  in_memory.rs  usecase.rs
src/: main.rs  skills.rs
src/skills/: bl.rs  http.rs  persist.rs
