[package]
name = "skill-manager-tui"
version = "0.1.0"
authors = ["'Timo Freiberg' <'timo.freiberg@gmail.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8.0"
anyhow = "1.0.27"
termion = "1.5.5"
skill-manager = { version = "0.1", path = "../skill-manager" }
skill-manager-in-memory = { version = "0.1", path = "../skill-manager-in-memory" }
