[package]
name = "skill-manager"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.2.7", features = ["serde", "std"] }
thiserror = "1.0.11"
anyhow = "1.0.26"
